--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Test</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/jQuery-v3.3.1.js"></script>
+    <script src="js/jquery-3.3.1.min.js"></script>
 </head>
 <body>
     <div class="content-holder clearfix">
@@ -99,10 +99,9 @@
     </div>
     <div class="footer-holder clearfix">
         <div class="form-wrap clearfix">
-            <form action="#">
-                <input type="text" id="in">
-                <button id="public">Написать консультанту</button>
-            </form>
+            <input type="text" id="in">
+            <button id="public">Написать консультанту</button>
+            <span class="error">Введите больше 3-ох символов!</span>
         </div>
     </div>
     <script src="js/messages.js"></script>
